<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="huey.socketclient.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-17dp"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:baselineAligned="false"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


            <TextView
                android:id="@+id/connectionStatus"
                android:layout_width="321dp"
                android:layout_height="27dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/serverIp"/>

            <EditText
                android:id="@+id/serverIp"
                android:layout_width="337dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/server_ip_address"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/disconnect"
                android:layout_width="117dp"
                android:layout_height="43dp"
                android:text="@string/disconnect"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/connect"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="21dp"
                app:layout_constraintTop_toBottomOf="@+id/connectionStatus"
                app:layout_constraintHorizontal_bias="0.673"/>

            <Button
                android:id="@+id/connect"
                android:layout_width="149dp"
                android:layout_height="56dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/connect"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/connectionStatus"/>


            <EditText
                android:id="@+id/fileInput"
                android:layout_width="94dp"
                android:layout_height="58dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/file_num"
                android:inputType="textPersonName"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/download"
                app:layout_constraintTop_toBottomOf="@+id/connect"/>

            <Button
                android:id="@+id/download"
                android:layout_width="205dp"
                android:layout_height="63dp"
                android:layout_marginEnd="9dp"
                android:layout_marginTop="32dp"
                android:text="@string/download"
                app:layout_constraintTop_toBottomOf="@+id/disconnect"
                android:layout_marginRight="-1dp"
                app:layout_constraintRight_toRightOf="parent"/>


            <Button
                android:id="@+id/fileList"
                android:layout_width="243dp"
                android:layout_height="52dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="17dp"
                android:text="@string/list_file"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar"/>

            <TextView
                android:id="@+id/progressBar"
                android:layout_width="294dp"
                android:layout_height="27dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="17dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/download"
                />

            <TextView
                android:id="@+id/fileView"
                android:layout_width="319dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="6.46"
                android:lineSpacingExtra="8sp"
                android:scrollbars="horizontal|vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fileList"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="273dp"/>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
